2008-12-18   D. V. Wiebe <getdata@ketiltrout.net>  svn:270
	* test/global_ref_get.c: Added.
	* src/globals.c (get_reference): Added.

	* bindings/f77/test/gdcopn.f: Added.

	* bindings/f77/fgetdata.c (_GDF_ClearDirfile): Let caller close dirfile.

	* bindings/f77/fgetdata.c (_GDF_FString): Fix off-by-one error.

	* bindings/f77/fgetdata.c (_GDF_Callback): Added.
	* bindings/f77/fgetdata.c: Add bindings for dirfile_cbopen and
	dirfile_discard.

	* bindings/f77/make_parameters.c: Add delete flags, protect levels,
	callback actions, syntax suberrors, GD_MAX_LINE_LENGTH, GD_ALL_FRAGMENTS,
	DIRFILE_STANDARDS_VERSION.

2008-12-18   D. V. Wiebe <getdata@ketiltrout.net>  svn:269
	* bindings/f77/make_parameters.c: Update for GD_E_BAD_PROTECTION and
	GD_E_UNCLEAN_DB.

	* bindings/f77/fgetdata.c bindings/f77/getdata.f.in bindings/f77/fgetdata.h
	bindings/f77/getdata.f90.in README.f77 bindings/f77/test/gdfget.f: Convert
	all Fortran-77 function names from GDFxxx to GDxxxx.
	
	* test/alter_mspec.c test/alter_spec.c: Added.

	* src/mod.c (dirfile_alter_spec dirfile_malter_spec): Call
	_GD_ParseFieldSpec with creat = 0

2008-12-17   D. V. Wiebe <getdata@ketiltrout.net>  svn:267
	* test/name_move.c test/protect_alter.c test/move_subdir.c test/file_code.c
	test/protect_get.c test/name.c test/unclude_del.c test/unclude.c
	test/file_type.c test/parent.c test/file.c test/unclude_move.c: Added.

	* doc/unclean_database_recovery.txt: Added.
	* COPYING.DOC: Added.
	* man/dirfile_alter_encoding.3.in man/dirfile_alter_endianness.3.in
	man/dirfile_alter_frameoffset.3in configure.ac: Build mans with paths.

	* src/getdata.h.in src/error.c: Added GD_E_UNCLEAN_DB.
	* src/endian.c (_GD_ByteSwapFragment) src/foffs.c (_GD_ShiftFragment)
	src/encoding.c (_GD_RecodeFragment): Return the dreaded GD_E_UNCLEAN_DB if
	finalisation fails.

	* src/entry.c (get_raw_filename): Call _GD_SetEncodedName.

	* src/flush.c (_GD_FlushFragment): Added.
	* src/flush.c (_GD_FlushMeta): Call _GD_FlushFragment.
