@@ -20,7 +20,7 @@
 .\" with GetData; if not, write to the Free Software Foundation, Inc.,
 .\" 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 .\"
-.TH dirfile_cbopen 3 "14 December 2008" "Version 0.5.0" "GETDATA"
+.TH dirfile_cbopen 3 "19 December 2008" "Version 0.5.0" "GETDATA"
 .SH NAME
 dirfile_cbopen dirfile_open \(em open or create a dirfile
 .SH SYNOPSIS
@@ -463,6 +463,7 @@ file parsing will fail gloriously on an EBCDIC platform.
 .BR dirfile-format (5),
 .BR dirfile_close (3),
 .BR dirfile_include (3),
+.BR dirfile_parser_callback (3),
 .BR getdata (3),
 .BR get_error (3),
 .BR get_error_string (3)
