@@ -1,6 +1,5 @@
-/* Attempt to get RAW filename */
+/* Test include */
 #include "../src/getdata.h"
-
 
 #include <stdlib.h>
 #include <sys/types.h>
@@ -9,43 +8,40 @@
 #include <string.h>
 #include <errno.h>
 #include <unistd.h>
+#include <stdio.h>
 
 int main(void)
 {
   const char* filedir = __TEST__ "dirfile";
   const char* format = __TEST__ "dirfile/format";
-  const char* data = __TEST__ "dirfile/data";
-  const char* format_data = "data RAW UINT8 8\n";
-  unsigned char data_data[256];
+  const char* format1 = __TEST__ "dirfile/format1";
+  const char* format_data = "\n";
+  const char* format1_data = "data ROW UINT8 11\n";
   int fd;
 
   mkdir(filedir, 0777);
-
-  for (fd = 0; fd < 256; ++fd)
-    data_data[fd] = (unsigned char)fd;
 
   fd = open(format, O_CREAT | O_EXCL | O_WRONLY, 0666);
   write(fd, format_data, strlen(format_data));
   close(fd);
 
-  fd = open(data, O_CREAT | O_EXCL | O_WRONLY, 0666);
-  write(fd, data_data, 256);
+  fd = open(format1, O_CREAT | O_EXCL | O_WRONLY, 0666);
+  write(fd, format1_data, strlen(format1_data));
   close(fd);
 
-  DIRFILE* D = dirfile_open(filedir, GD_RDONLY);
-  const char *path = get_raw_filename(D, "bata");
+  DIRFILE* D = dirfile_open(filedir, GD_RDWR);
+  dirfile_include(D, "format1", 0, 0);
   int error = get_error(D);
-
   dirfile_close(D);
 
-  unlink(data);
+  unlink(format1);
   unlink(format);
   rmdir(filedir);
 
-  if (error != GD_E_BAD_CODE)
+  if (error != GD_E_FORMAT) {
+    fprintf(stderr, "1=%i\n", error);
     return 1;
-  if (path != NULL)
-    return 1;
+  }
 
   return 0;
 }
